guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    higress.io/backend-protocol: "HTTP"
    higress.io/use-regex: "true"
    higress.io/rewrite-target: /$1
    argocd.argoproj.io/health-check-path: /
spec:
  ingressClassName: higress
  tls:
  - hosts:
    - yindan.209173.xyz
    secretName: guestbook-tls
  rules:
  - host: yindan.209173.xyz
    http:
      paths:
      - path: /guestbook(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
